# django-individual-models-training

./: README.md  manage.py  pyproject.toml
restful_django_pub_models/: asgi.py  settings.py  urls.py  wsgi.py
restful_django_pub_models/core/: admin.py  models.py  serializers.py  urls.py  views.py
restful_django_pub_models/core/migrations/: 0001_initial.py  0002_auto_20210211_1150.py  0003_auto_20210211_1152.py  0004_auto_20210211_1154.py
