[tool.poetry]
name = "django_pub_models"
version = "0.1.0"
description = ""
authors = ["Matheus B. Lopes <matheus.bachiste@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
pycodestyle = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
